force-app/main/default/objects/breg_Certificate__c/fields/breg_Account__c.field-meta.xml
<CustomField>
    <fullName>breg_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Aalta BREG-63</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Certificates</relationshipLabel>
    <relationshipName>Certificates</relationshipName>
    <type>Lookup</type>
</CustomField>