force-app/main/default/objects/breg_Certificate__c/fields/breg_Authentication_Code__c.field-meta.xml
<CustomField>
    <fullName>breg_Authentication_Code__c</fullName>
    <description>Aalta BREG-134</description>
    <label>Authentication Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>