force-app/main/default/objects/breg_Certificate__c/fields/breg_Certificate_Name__c.field-meta.xml
<CustomField>
    <fullName>breg_Certificate_Name__c</fullName>
    <description>Aalta BREG-1891</description>
    <label>Certificate Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>