force-app/main/default/objects/breg_Certificate__c/fields/breg_CERTS_COR_LOG__c.field-meta.xml
<CustomField>
    <fullName>breg_CERTS_COR_LOG__c</fullName>
    <description>Aalta BREG-63</description>
    <label>CERTS &amp; COR LOG</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>