force-app/main/default/objects/breg_Certificate__c/fields/breg_Correspondence_Type__c.field-meta.xml
<CustomField>
    <fullName>breg_Correspondence_Type__c</fullName>
    <description>Aalta BREG-63</description>
    <label>Correspondence Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Postal</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>