force-app/main/default/objects/breg_Certificate__c/fields/breg_Document__c.field-meta.xml
<CustomField>
    <fullName>breg_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Aalta BREG-134</description>
    <label>Document</label>
    <referenceTo>breg_Document__c</referenceTo>
    <relationshipLabel>Certificates</relationshipLabel>
    <relationshipName>breg_Certificates</relationshipName>
    <type>Lookup</type>
</CustomField>