force-app/main/default/objects/breg_Certificate__c/fields/breg_External_ID__c.field-meta.xml
<CustomField>
    <fullName>breg_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>