force-app/main/default/objects/breg_Certificate__c/fields/breg_FormCode__c.field-meta.xml
<CustomField>
    <fullName>breg_FormCode__c</fullName>
    <description>Aalta BREG-134</description>
    <formula>breg_Document__r.breg_Case__r.breg_Form_Configuration__r.Name</formula>
    <label>FormCode</label>
    <type>Text</type>
</CustomField>