force-app/main/default/objects/breg_Certificate__c/fields/breg_Is_Published__c.field-meta.xml
<CustomField>
    <fullName>breg_Is_Published__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Aalta BREG-134</description>
    <label>Is Published</label>
    <type>Checkbox</type>
</CustomField>