force-app/main/default/objects/breg_Certificate__c/fields/breg_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>breg_Issue_Date__c</fullName>
    <description>Aalta BREG-63</description>
    <label>Issue Date</label>
    <type>Date</type>
</CustomField>