force-app/main/default/objects/breg_Certificate__c/fields/breg_Legacy_Certificate_Number__c.field-meta.xml
<CustomField>
    <fullName>breg_Legacy_Certificate_Number__c</fullName>
    <description>Aalta BREG-62</description>
    <label>Legacy Certificate Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>