force-app/main/default/objects/breg_Certificate__c/fields/breg_Link_to_Authenticate__c.field-meta.xml
<CustomField>
    <fullName>breg_Link_to_Authenticate__c</fullName>
    <description>Aalta BREG-134</description>
    <formula>$Setup.BREG_Setting__c.Link_to_Portal__c &amp; &apos;/authenticate&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link to Authenticate</label>
    <type>Text</type>
</CustomField>