force-app/main/default/objects/breg_Certificate__c/fields/breg_Parent_Certificate__c.field-meta.xml
<CustomField>
    <fullName>breg_Parent_Certificate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Aalta BREG-2929</description>
    <label>Parent Certificate</label>
    <referenceTo>breg_Certificate__c</referenceTo>
    <relationshipLabel>Certificates</relationshipLabel>
    <relationshipName>breg_Child_Certificates</relationshipName>
    <type>Lookup</type>
</CustomField>