force-app/main/default/objects/breg_Certificate__c/fields/breg_Published_Date__c.field-meta.xml
<CustomField>
    <fullName>breg_Published_Date__c</fullName>
    <description>Aalta BREG-3131</description>
    <formula>DATEVALUE(breg_Published_Timestamp__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Published Date</label>
    <type>Date</type>
</CustomField>