force-app/main/default/objects/breg_Certificate__c/fields/breg_Published_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>breg_Published_Timestamp__c</fullName>
    <description>Aalta BREG-134</description>
    <label>Published Timestamp</label>
    <type>DateTime</type>
</CustomField>