force-app/main/default/objects/breg_Certificate__c/fields/breg_Template_Type__c.field-meta.xml
<CustomField>
    <fullName>breg_Template_Type__c</fullName>
    <description>Aalta BREG-63</description>
    <label>Template Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Administrator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>